--- a/pages/globals.css
+++ b/pages/globals.css
@@ -8,12 +8,19 @@
 
 body {
   --tw-bg-opacity: 1;
-  background: rgb(255, 255, 255);
+  background: rgb(245, 245, 245);
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #26282B
+    
   }
 }
 
